@@ -1,4 +1,4 @@
 DIST anyio-4.10.0.tar.gz 213252 BLAKE2B 6dc6c0c2290a78049854a74333e28d60ac65874a9cb3a15600da6fa81152b47741f7a5c2736eaef8d279b74ea7ccadc5847d50f5af8cf25f6d40ce0efdd8c4d3 SHA512 c696ce5216ff3b93114a53a938461c63df402ea099528e876d31af71c46242ed2b488819accb073c1e312dcad023b5836e5d462992ea01bf7d87b0b9ef3186ed
 EBUILD anyio-4.10.0.ebuild 2099 BLAKE2B 11056d27e5d17f52c96b14515f61b9fd7d27355dd3147b9c98f22b429409f4bfc661097d343c684557b39ba8004e9f9ae0cffb1021218e28754971ba7af7a417 SHA512 92267d070118026c65aa4b59070fdaab873e5aa94e51e78df00cce032a24b26428167840b637c71721ab717d0e5125643b87c325648fc721c0de1dde1ad8be92
-MISC ChangeLog 3415 BLAKE2B dc174d70941203cd7a382bf2a012e1eafe980667dbf817cad8d81dc335d17aaa87ed87d0027849ba0351194cd629f584de6378c2f0db14828298511ed74d7783 SHA512 1594262f4743c4e60b7056edd23c786c792939d84a404bab53c02d1fa3b1a93b0f2cdf8c97dea7525bd91736b18254b4d5b48050632f888883a59eabf336fb87
+MISC ChangeLog 3607 BLAKE2B b6b785c37f2faa8fbaf82d2d4adf2156b24e8f5c7810ee9a16fbd824883d961f391bc629f766704a9d88220acffcd70f1f6b2d534d2a864d052c617c55217570 SHA512 c579e044946a74d32435f11fd75c92ab9d288fc5034e522961397fac5f146af12aecf757c83acf7fac9da55c7a0b6405caa868eb050183c1c2b6d5b85c38907c
 MISC metadata.xml 513 BLAKE2B 1a128df54ff66d09506afbc9ad33b9f02166b027c5d5dc60e89abb9cd2809fdde85311090f2df1e2ce2f46ae376ae077b402e3a0e861b0453449cbc4907178ec SHA512 1a26bde236ca868281411456c983ae293dc1dd14d533696f74fb29048247ac918e21d4f74b05ff86a35ab3fdbbaf4d3ba99bf4aa5600f84a1610fa219a177011
