@@ -2,6 +2,12 @@
 # Copyright 1999-2025 Gentoo Foundation; Distributed under the GPL v2
 # (auto-generated from git log)
 
+*anyio-4.10.0 (02 Dec 2025)
+
+  02 Dec 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
+  -anyio-4.9.0.ebuild, +anyio-4.10.0.ebuild:
+  fix missing dep dev-python/anyio 4.10.0
+
   10 May 2025; Xavier FORESTIER <{ID}+{username}@users.noreply.github.com>
   -anyio-4.1.0.ebuild, -anyio-4.3.0-r1.ebuild, -anyio-4.4.0.ebuild,
   -anyio-4.7.0.ebuild:
